syntax = "proto3";

package auto_chunker;

service AutoChunker {
  rpc Chunk (ChunkRequest) returns (ChunkResponse) {}
}

message ChunkRequest {
  string text_content = 1;
  enum ChunkingMethod {
    SLIDING_WINDOW = 0;
    DIALOGUE_PROSE = 1;
    GENERATE_BEATS = 2;
  }
  ChunkingMethod chunking_method = 2;
}

message ChunkResponse {
  string jsonl_content = 1;
}
