syntax = "proto3";

package jsonl_file_creator;

service JsonlFileCreator {
  rpc CreateJsonl (CreateJsonlRequest) returns (CreateJsonlResponse) {}
}

message CreateJsonlRequest {
  string csv_content = 1;
}

message CreateJsonlResponse {
  string jsonl_content = 1;
}
